--- a/src/pages/Notes/NotesHub.module.css
+++ b/src/pages/Notes/NotesHub.module.css
@@ -10,8 +10,9 @@
 }
 
 .title {
+    font-family: var(--font-display);
     font-size: 32px;
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: 10px;
     color: var(--text-primary);
 }
